# plusdeck

./: CHANGELOG.md  Player.ipynb  README.md  int-test.py  justfile  mkdocs.yml  plusdeck.spec  plusdeck.spec.tmpl  protocol.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: qa.yaml
copr/: python-plusdeck.yml
docs/: dbus-iface.md  dbus.md  development.md  dialout.md  gstreamer.md  index.md  install.md  protocol.md
docs/api/: plusdeck.dbus.md
docs/api/plusdeck.dbus/: index.md
docs/dbus/: access.md  client.md  debugging.md  iface.md  index.md  service.md
plusdeck/: README.md  __init__.py  cli.py  client.py  config.py  jupyter.py  justfile  requirements_dev.txt  test.py
plusdeck/cli/: __init__.py  base.py  client.py  logger.py  obj.py  output.py  types.py
plusdeck/dbus/: client.py  config.py  domain.py  error.py  interface.py  server.py  service.py  shims.py
plusdeck/docs/: index.md
plusdeck/tests/: conftest.py
plusdeck_client/: .gitignore  pyproject.toml  requirements.txt  requirements_dev.txt
plusdeck_client/plusdeck_client/: __init__.py
plusdeck_client/tests/: conftest.py  test_protocol.py
polkit/: org.jfhbrook.plusdeck.policy  org.jfhbrook.plusdeck.rules
scripts/: bundle-gh-release.sh  changelog-entry.py  dbus-iface-markdown.pl  generate-dbus-iface-docs.sh  generate-spec.sh  get-dbus-iface.sh  gh-release.sh  integration.sh  release-version.py  release.sh  spec-changelog.py  tag.sh  version.py
systemd/: org.jfhbrook.plusdeck.conf  plusdeck.service
tests/: conftest.py  integration.py  test_client.py  test_config.py  test_dbus.py  test_protocol.py
tests/integration/: test_dbus.py
