[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plusdeck"
version = "1.0.0"
authors = [
  {name = "Josh Holbrook", email = "josh.holbrook@gmail.com"}
]
description = "Serial client for Plus Deck 2C PC Cassette Drive"
readme = "README.md"
keywords = []
license = { text = "MIT" }
dependencies = [
  "appdirs",
  "ipywidgets",
  "pyee",
  "pyserial",
  "pyserial-asyncio",
  "pyyaml",
]


[project.optional-dependencies]
dev = [
  "flake8",
  "flake8-black",
  "pytest",
  "pytest-asyncio",
  "black",
  "isort",
  "jupyterlab",
  "mkdocs",
  "mkdocs-bootstrap386",
  "mkdocstrings[python]",
  "rich",
  "tox",
  "twine",
  "validate-pyproject[all]",
]

[tool.isort]
profile = "appnexus"
known_application = "plusdeck"

[tool.pyright]
include = ["plusdeck", "tests"]

[tool.pytest]
addopts = "--verbose -s"
testpaths = [ "tests" ]

[tool.setuptools]
packages = [ "plusdeck" ]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements_dev.txt"] }
