[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plusdeck_client"
version = "1.0.0"
authors = [
  {name = "Josh Holbrook", email = "josh.holbrook@gmail.com"}
]
description = "Serial client for Plus Deck 2C PC Cassette Drive"
readme = "README.md"
keywords = []
license = { text = "MIT" }
dependencies = [
  "pyserial-asyncio"
]


[project.optional-dependencies]
dev = [
  "flake8",
  "flake8-black",
  "pytest",
  "black",
  "isort",
  "jupyterlab",
  "mkdocs",
  "mkdocs-bootstrap386",
  "mkdocstrings[python]",
  "tox",
  "twine",
  "validate-pyproject[all]",
]

[tool.isort]
profile = "appnexus"
known_application = "plusdeck_client"

[tool.pyright]
include = ["plusdeck_client", "tests"]

[tool.pytest]
addopts = "--verbose -s"
testpaths = [ "tests" ]

[tool.setuptools]
packages = [ "plusdeck_client" ]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements_dev.txt"] }
